--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ button{
     box-shadow: 1px 1px;
     border-radius: 10px;
     background-color: #FDF5E6;
-    font-size: medium;
+    font-size: 1.2rem;
     font-weight: 800;
     cursor: pointer;
     transition: all ease 0.05;
